After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682554 - Missing annotation on soup_cookie_jar_add_cookie() causes Python crash
Missing annotation on soup_cookie_jar_add_cookie() causes Python crash
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2012-08-23 16:13 UTC by Daniel Drake
Modified: 2012-08-23 17:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.22 KB, patch)
2012-08-23 16:14 UTC, Daniel Drake
accepted-commit_now Details | Review

Description Daniel Drake 2012-08-23 16:13:43 UTC
soup_cookie_jar_add_cookie() is documented to steal the cookie given to it, so this should be reflected in the annotation so that Python doesn't try and free it.

Please let me know if its ok to commit this to master and gnome-3-4.

Fixes http://bugs.sugarlabs.org/ticket/3825
Comment 1 Daniel Drake 2012-08-23 16:14:18 UTC
Created attachment 222238 [details] [review]
patch
Comment 2 Dan Winship 2012-08-23 16:42:44 UTC
Comment on attachment 222238 [details] [review]
patch

yup. please make the same fix to soup_cookie_jar_add_cookie_with_first_party() too please
Comment 3 Daniel Drake 2012-08-23 17:00:22 UTC
Thanks for the fast response. Pushed as
281ba3f  gnome-3-4
dc4cf04  master

including the soup_cookie_jar_add_cookie_with_first_party change in master.