Add missing transfer full annotation to soup_cookie_jar_add_cookie

Adding a cookie to a jar from Python (via introspection) wasn't working
right, since the cookie was being freed as soon as the python object
went out of scope, but soup_cookie_jar_add_cookie() explicitly states
that freeing shouldn't happen.

Add a missing annotation to fix this. Thanks to Benjamin Berg for the
suggestion.

Fixes http://bugs.sugarlabs.org/ticket/3825
https://bugzilla.gnome.org/show_bug.cgi?id=682554